--- a/packages/zoo/tsconfig.json
+++ b/packages/zoo/tsconfig.json
@@ -2,8 +2,14 @@
   "extends": "../../tsconfig.base.json",
   "include": [],
   "references": [
-    {
-      "path": "./tsconfig.lib.json"
-    }
-  ]
+	{
+		"path": "../names"
+	},
+	{
+		"path": "../animals"
+	},
+	{
+		"path": "./tsconfig.lib.json"
+	}
+]
 }
