--- a/packages/names/package.json
+++ b/packages/names/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tuskdesign/names",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -12,8 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/node": "18.16.9",
     "typescript": "~5.5.2"
